--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-  "github": {
-    "silent": true
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "public-dist" }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/$1" }
+  ]
 }
